--- a/manifest.json
+++ b/manifest.json
@@ -1,51 +1,78 @@
 {
-  "name": "Farm Manager PWA",
-  "short_name": "FarmManager",
-  "start_url": "/farm-management-pwa/",
-  "display": "standalone",
-  "background_color": "#4CAF50",
+  "name": "Farm Management PWA",
+  "short_name": "FarmMgmt",
+  "description": "Offline-first farm management for dairy and poultry farmers",
   "theme_color": "#4CAF50",
-  "orientation": "portrait-primary",
+  "background_color": "#FFFFFF",
+  "display": "standalone",
+  "orientation": "portrait",
+  "scope": "/",
+  "start_url": "/",
   "icons": [
     {
       "src": "icons/icon-72x72.png",
-      "type": "image/png",
-      "sizes": "72x72"
+      "sizes": "72x72",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-96x96.png",
-      "type": "image/png",
-      "sizes": "96x96"
+      "sizes": "96x96",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-128x128.png",
-      "type": "image/png",
-      "sizes": "128x128"
+      "sizes": "128x128",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-144x144.png",
-      "type": "image/png",
-      "sizes": "144x144"
+      "sizes": "144x144",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-152x152.png",
-      "type": "image/png",
-      "sizes": "152x152"
+      "sizes": "152x152",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-384x384.png",
-      "type": "image/png",
-      "sizes": "384x384"
+      "sizes": "384x384",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "categories": ["business", "productivity"],
+  "screenshots": [
+    {
+      "src": "screenshots/dashboard.png",
+      "sizes": "1170x2532",
       "type": "image/png",
-      "sizes": "512x512"
+      "form_factor": "narrow"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Add Production",
+      "short_name": "Production",
+      "description": "Add milk or egg production record",
+      "url": "/?action=add-production",
+      "icons": [{ "src": "icons/production.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "View Dashboard",
+      "short_name": "Dashboard",
+      "description": "View farm dashboard",
+      "url": "/?page=dashboard",
+      "icons": [{ "src": "icons/dashboard.png", "sizes": "96x96" }]
     }
   ]
 }
